# ai-terminal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  commands.md
src/: main.rs
