[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"
description = "Natural language terminal powered by AI"
license = "MIT"
authors = ["Scott Hardie"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
home = "0.5"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[dependencies.anthropic]
version = "0.18"
default-features = false

[profile.release]
lto = true
codegen-units = 1
